Archive2/dd/3a7143dc6894fa/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:9: warning: #pragma once in main file [enabled by default]
 #pragma once
         ^
main.cpp: In function ‘void tt::algo::shellSort(Iterator, Iterator, Sequence, Predicate)’:
main.cpp:75:25: error: ‘detail’ has not been declared
                         detail::recursiveShellSort(begin, end, strideSeq, pred, numElems, startIndex);
                         ^
